clusters/cluster1/media/calibreweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibreweb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibreweb
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      labels:
        app: calibreweb
    spec:
      containers:
      - name: calibreweb
        image: ghcr.io/crocodilestick/calibre-web-automated:v4.0.7 # {"$imagepolicy": "flux-system:calibre-web-automated"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: "http-port"
          containerPort: 8083
          protocol: TCP
        resources:
          requests:
            cpu: 5m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 2Gi
        volumeMounts:
        - name: calibreweb-config
          mountPath: /config
        - name: books-nfs
          mountPath: /calibre-library
        - name: cwa-book-ingest
          mountPath: /cwa-book-ingest
      volumes:
      - name: calibreweb-config
        persistentVolumeClaim:
          claimName: calibreweb-config-pvc
      - name: books-nfs
        persistentVolumeClaim:
          claimName: books-pvc
          #readOnly: true
      - name: cwa-book-ingest
        persistentVolumeClaim:
          claimName: cwa-book-ingest-pvc
