clusters/cluster1/media/sabnzbd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: linuxserver/sabnzbd:5.1.3 # {"$imagepolicy": "flux-system:sabnzbd"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: "2"
            memory: 4Gi
        volumeMounts:
        - name: sabnzbd-config
          mountPath: /config
        - name: sabnzbd-downloads-complete
          mountPath: /complete
        - name: sabnzbd-downloads-incomplete
          mountPath: /incomplete
      volumes:
      - name: sabnzbd-config
        persistentVolumeClaim:
          claimName: sabnzbd-config-pvc
      - name: sabnzbd-downloads-complete
        persistentVolumeClaim:
          claimName: downloads-complete-pvc
      - name: sabnzbd-downloads-incomplete
        persistentVolumeClaim:
          claimName: downloads-incomplete-pvc
