clusters/cluster1/media/overseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: linuxserver/overseerr:1.35.0 # {"$imagepolicy": "flux-system:overseerr"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5055
        resources:
          requests:
            cpu: 5m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 2Gi
        volumeMounts:
        - name: overseerr-config
          mountPath: /config
      volumes:
      - name: overseerr-config
        persistentVolumeClaim:
          claimName: overseerr-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: default
  labels:
    app: overseerr
spec:
  selector:
    app: overseerr
  ports:
  - name: overseerr
    port: 5055
    targetPort: 5055
  type: ClusterIP
