clusters/cluster1/media/pinchflat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinchflat
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinchflat
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      labels:
        app: pinchflat
    spec:
      containers:
      - name: pinchflat
        image: ghcr.io/kieraneglin/pinchflat:dev
        # {"$imagepolicy": "flux-system:pinchflat"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8945
        resources:
          requests:
            cpu: 10m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 2Gi
        volumeMounts:
        - name: ytshows
          mountPath: /downloads
        - name: pinchflat-config
          mountPath: /config
      volumes:
      - name: pinchflat-config
        persistentVolumeClaim:
          claimName: pinchflat-config-pvc
      - name: ytshows
        persistentVolumeClaim:
          claimName: ytshows-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pinchflat
  namespace: default
  labels:
    app: pinchflat
spec:
  selector:
    app: pinchflat
  ports:
  - name: pinchflat
    port: 8945
    targetPort: 8945
  type: ClusterIP
