clusters/cluster1/media/qbittorrent.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: default
  labels:
    app: gluetun
spec:
  selector:
    app: gluetun
  ports:
  - name: qbittorrent
    port: 8080
    targetPort: 8080
  - name: qbittorrent-torrentudp
    port: 6881
    protocol: UDP
    targetPort: 6881
  - name: qbittorrent-torrenttcp
    port: 6881
    protocol: TCP
    targetPort: 6881
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gluetun-deployment
    namespace: default
    labels:
        app: gluetun
spec:
    replicas: 1
    strategy:
      rollingUpdate: null
      type: Recreate
    selector:
        matchLabels:
            app: gluetun
    template:
        metadata:
            labels:
                app: gluetun
        spec:
            containers:
            - name: qbittorrent
              image: linuxserver/qbittorrent:14.3.9 # {"$imagepolicy": "flux-system:qbittorrent"}
              imagePullPolicy: IfNotPresent
              ports:
              - containerPort: 8080
              #- containerPort: 26524
              volumeMounts:
              - name: qbittorrent-config
                mountPath: /config
              - name: sabnzbd-downloads-complete
                mountPath: /complete
              - name: sabnzbd-downloads-incomplete
                mountPath: /incomplete
            volumes:
            - name: qbittorrent-config
              persistentVolumeClaim:
                claimName: qbittorrent-config-pvc
            - name: sabnzbd-downloads-complete
              persistentVolumeClaim:
                claimName: downloads-complete-pvc
            - name: sabnzbd-downloads-incomplete
              persistentVolumeClaim:
                claimName: downloads-incomplete-pvc
