clusters/cluster1/media/shelfmark.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shelfmark
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shelfmark
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      labels:
        app: shelfmark
    spec:
      containers:
      - name: shelfmark
        image: ghcr.io/calibrain/shelfmark:v1.4.0 # {"$imagepolicy": "flux-system:shelfmark"}
        imagePullPolicy: Always
        ports:
        - name: "http-port"
          containerPort: 8084
          protocol: TCP
        resources:
          requests:
            cpu: 5m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - name: config
          mountPath: /config
        - name: cwa-book-ingest
          mountPath: /books
      volumes:
      - name: config
        emptyDir: {}
      - name: cwa-book-ingest
        persistentVolumeClaim:
          claimName: cwa-book-ingest-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: shelfmark
  namespace: default
  labels:
    app: shelfmark
spec:
  selector:
    app: shelfmark
  ports:
  - name: shelfmark
    port: 8084
    targetPort: 8084
  type: ClusterIP
