clusters/cluster1/media/bento.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bento
  namespace: default
spec:
  replicas: 1
  strategy:
    rollingUpdate: null
    type: Recreate
  selector:
    matchLabels:
      app: bento
  template:
    metadata:
      labels:
        app: bento
    spec:
      containers:
      - name: bento
        image: ghcr.io/alam00000/bentopdf:1.10.0 # {"$imagepolicy": "flux-system:bento"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bento
  namespace: default
  labels:
    app: bento
spec:
  selector:
    app: bento
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bento-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01"
spec:
  ingressClassName: internal-nginx
  tls:
  - hosts:
    - "bento.tallflix.ca"
    secretName: tls-secret-bento
  rules:
  - host: bento.tallflix.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bento
            port:
              number: 8080
