clusters/cluster1/media/calibreweb-downloader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibreweb-downloader
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibreweb-downloader
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      labels:
        app: calibreweb-downloader
    spec:
      containers:
      - name: calibreweb-downloader
        image: ghcr.io/calibrain/calibre-web-automated-book-downloader:0.2.3 # {"$imagepolicy": "flux-system:calibre-web-automated-book-downloader"}
        imagePullPolicy: Always
        ports:
        - name: "http-port"
          containerPort: 8084
          protocol: TCP
        volumeMounts:
        - name: db-volume
          mountPath: /auth/app.db
          subPath: app.db
          readOnly: true
        - name: cwa-book-ingest
          mountPath: /cwa-book-ingest
      volumes:
      - name: db-volume
        persistentVolumeClaim:
          claimName: calibreweb-config-pvc
          readOnly: true
      - name: cwa-book-ingest
        persistentVolumeClaim:
          claimName: cwa-book-ingest-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: calibreweb-downloader
  namespace: default
  labels:
    app: calibreweb-downloader
spec:
  selector:
    app: calibreweb-downloader
  ports:
  - name: calibreweb-downloader
    port: 8084
    targetPort: 8084
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibrewebdownloader-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "calibreweb-downloader.tallflix.ca"
    secretName: tls-secret-calibredl
  rules:
  - host: "calibreweb-downloader.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: calibreweb-downloader
            port:
              number: 8084
