clusters/cluster1/media/silverbullet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: silverbullet
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: silverbullet
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      labels:
        app: silverbullet
    spec:
      containers:
      - name: silverbullet
        image: ghcr.io/silverbulletmd/silverbullet:2.5.2 # {"$imagepolicy": "flux-system:silverbullet"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 5m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 1Gi
        volumeMounts:
        - name: silverbullet-space
          mountPath: /space
      volumes:
      - name: silverbullet-space
        persistentVolumeClaim:
          claimName: silverbullet-space-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: silverbullet
  namespace: default
  labels:
    app: silverbullet
spec:
  selector:
    app: silverbullet
  ports:
  - name: silverbullet
    port: 3000
    targetPort: 3000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silverbullet-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01"
spec:
  ingressClassName: internal-nginx
  tls:
  - hosts:
    - "silverbullet.tallflix.ca"
    secretName: silverbullet-tls-secret
  rules:
  - host: "silverbullet.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: silverbullet
            port:
              number: 3000
