clusters/cluster1/media/stirling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling
  namespace: default
spec:
  replicas: 1
  strategy:
    rollingUpdate: null
    type: Recreate
  selector:
    matchLabels:
      app: stirling
  template:
    metadata:
      labels:
        app: stirling
    spec:
      containers:
      - name: stirling
        image: stirlingtools/stirling-pdf:2.7.3 # {"$imagepolicy": "flux-system:stirling"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 512Mi
          limits:
            cpu: "1"
            memory: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  name: stirling
  namespace: default
  labels:
    app: stirling
spec:
  selector:
    app: stirling
  ports:
  - name: stirling
    port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01"
spec:
  ingressClassName: internal-nginx
  tls:
  - hosts:
    - "stirling.tallflix.ca"
    secretName: tls-secret-stirling
  rules:
  - host: stirling.tallflix.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stirling
            port:
              number: 8080
